# ai-plot-twist

./: .env.example  .gitignore  .lighthouserc.json  LICENSE  README.md  SDD.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  mypy.ini  openapi.json  package.json  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_users_invites.py  0003_rate_limit_buckets.py  0004_seasons_chapters.py  0005_cycles_transitions.py  0006_system_flags.py  0007_twists.py  0008_votes.py  0009_push_subscriptions.py  0010_state_transitions_next_chapter_id.py  0011_add_characters_table.py  0012_seed_characters.py  0013_twists_character_id.py  0014_twists_character_id_default_trigger.py  0015_seed_characters_full_roster.py
apps/api/app/: __init__.py  db.py  errors.py  logging.py  main.py  settings.py
apps/api/app/api/: __init__.py  admin.py  auth.py  chapters.py  characters.py  health.py  internal_client_log.py  internal_director_replay.py  internal_generation_rerun.py  internal_health_cycle.py  internal_kill_switch.py  internal_push_test.py  internal_transition.py  me_twists.py  push.py  seasons.py  twists.py  voting.py
apps/api/app/domain/: __init__.py  admin_auth.py  bible_redaction.py  clip_pipeline.py  content_service.py  cycle_clock.py  cycle_executor.py  cycle_fsm.py  (+35 more)
apps/api/tests/: __init__.py  conftest.py  test_admin_auth.py  test_admin_cycle.py  test_admin_upload.py  test_db.py  test_email_resend.py  test_health.py  test_hmac.py  test_internal_transition.py  test_main.py  test_migrations.py  test_settings.py
(+472 files in other folders)
