[project]
name = "aiplottwist-api"
version = "0.1.0"
description = "AI Plot Twist — FastAPI backend"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.29",
    "alembic~=1.13",
    "pydantic~=2.7",
    "pydantic-settings~=2.3",
    "structlog~=24.1",
    "httpx~=0.27",
    "python-dateutil~=2.9",
    "pyjwt~=2.9",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "mypy~=1.10",
    "ruff>=0.5",
    "types-python-dateutil",
    # asyncpg ships no inline stubs; this package provides them for mypy strict
    "asyncpg-stubs",
    "types-pyyaml>=6.0.12.20260518",
    # JSON Schema validation for module 004 T-010 contract test.
    "jsonschema~=4.23",
    "types-jsonschema",
]

[tool.uv]
# This is an application, not a library — uv will not try to install it as a package.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
# mypy.ini is used instead; this section is intentionally absent to keep
# mypy config in one place (apps/api/mypy.ini).
